make update and destroy product api
