# app/Http/Resources/ProductResource.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class ProductResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'category_id' => $this->category_id,
+            'brand_id' => $this->brand_id,
+            'price' => $this->price,
+            'quantity' => $this->quantity,
+            'description' => $this->description,
+            'thumbnail' => ProductImageResource::make($this->whenLoaded('thumbnail')),
+            'images' => ProductImageResource::collection($this->whenLoaded('images')),
+            'created_at' => $this->created_at,
+            'updated_at' => $this->updated_at
+        ];
+    }
+}
