# storage/api-docs/api-docs.json
@@ -464,6 +464,253 @@
                     }
                 ]
             }
+        },
+        "/api/v1/admin/products": {
+            "get": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get all products",
+                "description": "Get all products",
+                "operationId": "getProducts",
+                "responses": {
+                    "200": {
+                        "description": "Get products successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Create a product",
+                "description": "Create a brand",
+                "operationId": "createProduct",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "category_id",
+                                    "brand_id",
+                                    "price",
+                                    "quantity",
+                                    "description",
+                                    "thumbnail",
+                                    "images[]"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "category_id": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "brand_id": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "price": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "quantity": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "description": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "thumbnail": {
+                                        "type": "file"
+                                    },
+                                    "images[]": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "file"
+                                        }
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Create product successfully.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/admin/products/{id}": {
+            "post": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Update a product",
+                "description": "Update a product",
+                "operationId": "updateProduct",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of Product",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "category_id",
+                                    "brand_id",
+                                    "price",
+                                    "quantity",
+                                    "description"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "category_id": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "brand_id": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "price": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "quantity": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "description": {
+                                        "type": "text",
+                                        "example": ""
+                                    },
+                                    "thumbnail": {
+                                        "type": "file"
+                                    },
+                                    "delete_img_ids[]": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "text",
+                                            "example": ""
+                                        }
+                                    },
+                                    "images[]": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "file"
+                                        }
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Create product successfully.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Delete a product",
+                "description": "Delete a product",
+                "operationId": "deleteProduct",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of product",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Delete product successfully.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
